@@ -1,7 +1,12 @@
 ---------------------------------------------------------------------------------------------------
 Version: 0.3.24
-Date: 2022-02-10
-  Changes: Support for sonaxaton-research-queue
+Date: 2022-03-09
+  Changes:
+    - Support for sonaxaton-research-queue
+    - "open target" handler improved
+    - more on fuel-category
+    - pipette
+    - presentation of catalyst amounts improved
 ---------------------------------------------------------------------------------------------------
 Version: 0.3.23
 Date: 2021-10-02
